--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -85,6 +85,7 @@ set(
     0091-max_poll_interval_timeout.c
     0092-mixed_msgver.c
     0093-holb.c
+    0094-idempotence_msg_timeout.c
     8000-idle.cpp
     test.c
     testcpp.cpp
